# Projects

./: README.md
DGraphDTA-ITI/: README.md  adapt_dataset.py  binding.py  create_folds.py  data_process.py  draft.py  environment.yml  exec_scripts.sh  merge_davis_binding.py  requirements.txt  résultat_papier.txt  scripts.py  test.py  test_script.sh  train_script.sh  training.py  utils.py  verif_y.py
DGraphDTA-ITI/mlruns/0/: meta.yaml
DGraphDTA-ITI/mlruns/524264131970255633/: meta.yaml
DGraphDTA-ITI/mlruns/607583319618950004/: meta.yaml
DGraphDTA-ITI/mlruns/962634375452720041/: meta.yaml
GNN-projects/: README.md
GNN-projects/.virtual_documents/metaweb/: metaweb.ipynb
GNN-projects/.virtual_documents/proteins_classification/: main.ipynb
GNN-projects/Proteins classification/: README.md  main.ipynb
GNN-projects/Proteins classification/.ipynb_checkpoints/: main-checkpoint.ipynb
GNN-projects/Trophic metaweb/: README.md  metaweb.ipynb
GNN-projects/Trophic metaweb/.ipynb_checkpoints/: metaweb-checkpoint.ipynb
GNN-projects/Trophic metaweb/data/: clean_species_and_taxo.csv  (+2 more)
HuffmanCompression/: README.md  huff.py  pyproject.toml  requirements.txt
HuffmanCompression/huffman/: __init__.py  arbre_huffman.py  code_binaire.py  compresseur.py  compteur.py  file_de_priorite.py
HuffmanCompression/tests/: test_code_binaire.py  test_compresseur.py  test_compteur.py  test_file_de_priorite.py
Pepper_Robot/: README.md
Pepper_Robot/FaceRecognition/: gender_classification-1.ipynb
Pepper_Robot/Naoqi/: V0.py  V1.py  gender_classifier.py  requirements.txt  utils.py
(+260 files in other folders)
