[tool.poetry]
name = "huffmancompression"
version = "0.1.0"
description = "A project on huffman compression and decompression"
authors = ["Jade Affolabi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"