[tool.poetry]
name = "HuffmanCompression"
version = "0.1.0"
description = "A project on huffman compression and decompression"
authors = ["Jade Affolabi"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.12.2"
pytest = "^8.3.2"
pyyaml = "^6.0.2"
lark = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
